# bioconvert

./: .workflow-index.yml  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: apptainer.yml  main.yml
doc/: conf.py  index.rst
sequana_pipelines/bioconvert/: __init__.py  bioconvert.rules  config.yaml  main.py  requirements.txt  schema.yaml
test/: test_main.py
